# SeFA

./: README.md  pyproject.toml  refresh_historic_data.py  refresh_rbi_rates.py  run.py
docs/superpowers/plans/: 2026-07-06-sefa-sold-shares.md
docs/superpowers/specs/: 2026-07-06-sefa-sold-shares-design.md
historic_data/rates/rbi/: rates.xls
historic_data/shares/adbe/: data.csv
models/: sale.py
models/itr/: faa3.py
parser/demat/etrade/: etrade_benefit_history_parser.py  etrade_gains_losses_parser.py
parser/itr/: faa3_parser.py
tests/unit/parser/demat/etrade/: conftest.py  test_etrade_espp_benifit_history_parser.py  test_etrade_gains_losses_parser.py
tests/unit/parser/itr/: test_faa3_csv_row.py  test_faa3_parse_org_purchases.py  test_faa3_reconcile.py
