[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SeFA"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "openpyxl",
    "yfinance",
    "requests",
]

[tool.setuptools.packages.find]
include = ["models*", "parser*", "utils*"]

[tool.pylint]
# Configuration for Pylint

# Disable specific messages
disable = [
    "missing-docstring", # Disable missing docstring warnings
    "missing-module-docstring",
    "wrong-import-order",
    "wrong-import-position"
]

# Set the maximum number of characters on a single line
max-line-length = 100

# Set the maximum number of arguments for a function/method
max-args = 5

# Disable full report
reports = false
